[project]
name = "repl-nix-ytubefen-xi-matupu"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fonttools>=4.55.0",
    "google-api-python-client>=2.153.0",
    "google-generativeai>=0.8.3",
    "isodate>=0.7.2",
    "kaleido==0.2.1",
    "networkx>=3.4.2",
    "pandas",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "streamlit>=1.40.1",
    "svglib>=1.5.1",
    "youtube-transcript-api>=0.6.2",
]
