[project]
name = "repl-nix-ytubefen-xi-matupu"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "fonttools>=4.55.0",
    "google-api-python-client>=2.153.0",
    "google-cloud-speech>=2.21.0",
    "google-generativeai>=0.8.3",
    "isodate>=0.7.2",
    "kaleido==0.2.1",
    "networkx>=3.4.2",
    "pandas",
    "pillow>=10.1.0",
    "plotly>=5.24.1",
    "pytube>=15.0.0",
    "reportlab>=4.0.7",
    "requests>=2.31.0",
    "streamlit>=1.40.1",
    "svglib>=1.5.1",
    "weasyprint>=62.3",
    "youtube-transcript-api>=0.6.2",
]
